removed syntax highlighted block text shadow and added word-wrap as a temp fix for wrapping word spans

--- a/static/styles.css
+++ b/static/styles.css
@@ -115,6 +115,13 @@
 		top: 16px;
 }
 */
+.highlight {
+		text-shadow: none !important;
+		white-space:normal !important;
+		word-wrap: break-word !important;;
+}
+
+
 .main-logo-img {
 		height: 37px;
 		margin-top: 6px;
